:art: Fix z-index with OctoLapse
The menu was overlapsed by OctoLapse and their aggressive z-index; therefor
make the z-index higher than OctoLapse

Fixes #418

--- a/octoprint_touchui/static/less/touchui.bundled.less
+++ b/octoprint_touchui/static/less/touchui.bundled.less
@@ -601,7 +601,7 @@ color: @main-color;
 padding: 0;
 margin: 0;
 position: relative;
-z-index: 2;
+z-index: 9999;
 white-space: nowrap;
 text-align: right;
 &:active {
@@ -855,7 +855,7 @@ color: @btn-danger-text;
 }
 }
 #navbar {
-z-index: 2;
+z-index: 999;
 .navbar-inner {
 .container {
 .rem(height, 66);
