--- a/source/less/layout/navbar.less
+++ b/source/less/layout/navbar.less
@@ -1,5 +1,5 @@
 #navbar {
-	z-index: 2;
+	z-index: 999;
 
 	.navbar-inner {
 
@@ -30,7 +30,7 @@
 								overflow: hidden;
 								padding: 5px 0;
 							}
-							
+
 							b.caret {
 								display: none;
 							}
@@ -108,7 +108,7 @@
 										content: "\f013";
 									}
 								}
-								
+
 								&#navbar_plugin_announcements {
 									display: none;
 								}
@@ -205,11 +205,11 @@
 									.icon-wrench{
 										display: none;
 									}
-									
+
 									&:active {
 										background: darken(@main-color, 15%);
 									}
-									
+
 									&:hover {
 										background: transparent;
 									}
@@ -227,7 +227,7 @@
 									}
 
 								}
-								
+
 								&:active > a {
 									background: darken(@main-color, 15%);
 								}
@@ -273,7 +273,7 @@
 								padding-right: 0;
 								text-indent: 12px;
 							}
-							
+
 							&.hide + #login_dropdown_loggedin {
 								display: block;
 							}
